# SimpleIRC

./: .ghci  .gitignore  Irc.hs  Messages.hs  exampleBot.hs  license  readme.markdown  simpleirc.cabal  stack.yaml  testbot.hs
Network/: SimpleIRC.hs
Network/SimpleIRC/: Core.hs  Messages.hs  Sasl.hs  Types.hs  Utils.hs
example/: example.hs
tests/: CoreSpec.hs  Spec.hs  channelNickTracking.hs  disconnecttest.hs  eventChangeTest.hs  testbot.hs
